# host-llm

./: README.md  pyproject.toml  test.py
src/: __init__.py  app.py  bootstrap.py  main.py
src/config/: _container.py  _environment.py  _logger.py  settings.py
src/controllers/: huggingface.py
src/models/: llm_models.py  models.json  schemas.py
src/routes/: api.py
src/routes/endpoints/: text_generation.py
src/services/: cache_service.py  llm_service.py
src/utils/: helpers.py
