[tool.poetry]
name = "llm-api"
version = "0.1.0"
description = "LLM API service using Hugging Face models"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
transformers = "^4.35.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
torch = "^2.1.0"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
httpx = "^0.25.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
isort = "^5.12.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black" 