[project]
name = "host-llm"
version = "0.1.0"
description = ""
authors = [
    {name = "CIOI",email = "rhkr9693@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "dependency-injector (>=4.46.0,<5.0.0)",
    "findup (>=0.3.0,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
transformers = "^4.35.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
torch = "^2.1.0"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
httpx = "^0.25.1"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
isort = "^5.12.0"
pytest-asyncio = "^0.21.1"
ipykernel = "^6.29.5"

[tool.black]
line-length = 88

[tool.isort]
profile = "black" 